# ViettelSMS_AuthenticationService/docs/swagger.json
@@ -14,9 +14,9 @@
         },
         "version": "1.0"
     },
-    "host": "localhost",
+    "host": "auth.localhost",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "User login",
                 "consumes": [
@@ -62,7 +62,7 @@
                 }
             }
         },
-        "/api/v1/auth/refresh": {
+        "/auth/refresh": {
             "post": {
                 "description": "Refresh user token",
                 "consumes": [
